# claustrophobia

./: Cargo.toml
assets/: shader.wgsl
assets/levels/: claustrophobia.ldtk
src/: level_loader.rs  main.rs  resource.rs  system.rs
src/game/: component.rs  mod.rs  system.rs
src/game/camera/: mod.rs  system.rs
src/game/enemy/: component.rs  mod.rs  system.rs
src/game/map/: mod.rs  system.rs
src/game/medicine/: component.rs  mod.rs  resource.rs  system.rs
src/game/physics/: component.rs  mod.rs  resource.rs  system.rs
src/game/player/: component.rs  mod.rs  system.rs
src/menu/: mod.rs  system.rs
