[package]
name = "claustrophobia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_ecs_tilemap = "0.10.0"
serde = "1.0.159"
serde_json = "1.0.95"


[features]
atlas = ["bevy_ecs_tilemap/atlas"]


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3


